# trading_bot

./: .dockerignore  .gitignore  DEPLOY_TO_HF.bat  Deploy-to-HF.ps1  Dockerfile  ENV_REFRESH_SUMMARY.md  FIX_SUMMARY.md  HF_DEPLOYMENT_GUIDE.md  HF_QUICK_START.md  MANIFEST.in  MANUAL_DEPLOYMENT.md  README.md  __init__.py  analyze_rules.py  deploy.py  environment.py  graders.py  indicators.py  inference.py  models.py  openenv.yaml  pyproject.toml  pyrightconfig.json  requirements.txt  rl_optimizer.py  run_score_test.py  server.py  test_environment.py  test_fallback.py  test_flow.py  test_grader_validation.py  test_proxy.py  tune.py  validate_deployment.py  validation_output.txt  validation_report.txt
docs/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_HUB.md  QUICK_START.md  README.md  START_HERE.md  SUBMISSION_CHECKLIST.md  TROUBLESHOOTING.md  performance_report.txt  quick_results.txt  quick_results_score.txt  validation_report.txt
engine/: market_data.json  simulator.py
llm_quant_trading_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
my_trading_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
my_trading_env/server/: Dockerfile  __init__.py  app.py  my_trading_env_environment.py
scripts/: __init__.py  evaluate_hack.py  evaluate_random.py  generate_test_data.py  grader.py  graders.py  quick_score.py  quick_test.py  validate_deployment.py  validate_submission.py
server/: app.py
src/: __init__.py  agent.py  agent_core.py  client.py  config.py  environment.py  inference.py  market_generator.py  models.py  risk_manager.py  server.py  tools.py
src/test_data/: hard_cases.json
test_data/: easy_cases.json  medium_cases.json
tests/: test_agent.py  test_local.py  test_strat.py
