[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-safety-review"
version = "1.0.0"
description = "OpenEnv Hackathon environment for safety review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core==0.1.5",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.6.0",
    "openai==1.31.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.9",
]

[tool.setuptools]
packages = ["find:"]
