[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-safety-review"
version = "1.0.0"
description = "OpenEnv Hackathon environment for safety review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core==0.2.3",
    "fastapi==0.115.2",
    "uvicorn[standard]==0.44.0",
    "pydantic==2.12.5",
    "openai==2.30.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.24",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["environment", "models", "graders"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server", "server.*", "src", "src.*", "scripts", "scripts.*"]

[tool.setuptools.package-data]
"*" = ["src/test_data/*.json"]

[tool.pyright]
extraPaths = ["."]
