[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-quant-trading-env"
version = "1.0.0"
description = "LLM Quant Trading Environment for OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core==0.2.3",
    "fastapi==0.115.2",
    "uvicorn[standard]==0.44.0",
    "pydantic>=2.0,<3.0",
    "openai==2.30.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.24",
    "gradio>=4.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["environment", "models", "graders"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server", "server.*", "src", "src.*", "scripts", "scripts.*"]

[tool.setuptools.package-data]
"*" = ["src/test_data/*.json"]

[tool.pyright]
extraPaths = ["."]
